--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,12 @@ services:
           memory: "200MB"
 
   db:
-    image: mongo:latest
+    image: mongo
     hostname: db
     ports:
       - "27018:27017"
     volumes:
-      - ./script.sql:/docker-entrypoint-initdb.d/script.sql:r
+      - ./docker-entrypoint-initdb.d/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     deploy:
       resources:
         limits:
