--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.mongodb.connection-string=mongodb://localhost:27018
+quarkus.mongodb.connection-string=mongodb://db
 quarkus.mongodb.database=rinha
