--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   api01:
     &api
-    image: quarkus/api
+    image: gitlucaslima/quarkus-dguerra:1.0
     hostname: api01
     environment:
       - DB_HOSTNAME=db
