--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 quarkus.mongodb.connection-string=mongodb://db
 quarkus.mongodb.database=rinha
+quarkus.mongodb.max-pool-size=15
+quarkus.http.enable-compression=true
+
