--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,39 +1,21 @@
 events {
-    worker_connections 4096;  # Aumenta o número máximo de conexões por worker
+    worker_connections 4096;
 }
 
 http {
-    access_log off;  # Desativa o log de acesso para melhorar o desempenho
-    sendfile on;  # Ativa o envio de arquivos para melhorar o desempenho de E/S
-    tcp_nopush on;  # Ativa o envio de cabeçalhos HTTP e corpo de resposta em uma única transmissão
-    tcp_nodelay on;  # Ativa a transmissão de dados em tempo real, sem atrasos desnecessários
-    keepalive_timeout 65;  # Define o tempo limite de keep-alive para manter as conexões TCP abertas
-    types_hash_max_size 4096;  # Aumenta o tamanho máximo do hash de tipos MIME
-    include mime.types;  # Inclui o arquivo mime.types para mapeamento de tipos MIME
-    default_type application/octet-stream;  # Define o tipo MIME padrão para aplicativos binários
+    access_log off;
+    sendfile   on;
 
-    # Configurações do pool de servidores upstream
     upstream api {
-        server api01:8080;  # Servidor 1 com peso 3 (recebe mais tráfego)
-        server api02:8080;  # Servidor 2 com peso 2 (recebe menos tráfego)
-        keepalive 64;  # Define o número máximo de conexões persistentes para cada servidor
+        server api01:8080;
+        server api02:8080;
     }
 
-    # Configurações do servidor Nginx
     server {
-        listen 9999;  # Define o servidor para escutar na porta 9999
+        listen 9999; # Lembra da porta 9999 obrigatória?
 
-        # Configurações da localização padrão
         location / {
-            proxy_pass http://api;  # Encaminha todas as solicitações para o pool de servidores upstream
-            proxy_http_version 1.1;  # Usa a versão HTTP 1.1 para melhorar a compatibilidade
-            proxy_set_header Connection "";  # Remove o cabeçalho de conexão para conexões persistentes
-            proxy_set_header Host $host;  # Define o cabeçalho Host com o nome do host do cliente
-            proxy_set_header X-Real-IP $remote_addr;  # Define o cabeçalho X-Real-IP com o endereço IP real do cliente
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # Define o cabeçalho X-Forwarded-For com o endereço IP do cliente
-            proxy_set_header X-Forwarded-Proto $scheme;  # Define o cabeçalho X-Forwarded-Proto com o esquema do URI original
-            proxy_buffering off;  # Desativa o buffering de proxy para transmissão em tempo real
-            proxy_read_timeout 120s;  # Define o tempo limite de leitura para solicitações do cliente
+            proxy_pass http://api;
         }
     }
 }
