--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.mongodb.connection-string=mongodb://db
+quarkus.mongodb.connection-string=mongodb://localhost:27017/db
 quarkus.mongodb.database=rinha
 quarkus.mongodb.max-pool-size=15
 quarkus.http.enable-compression=true
