terminando config de cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-quarkus.mongodb.connection-string=mongodb://db
+quarkus.mongodb.connection-string=mongodb://db:27017/db
 quarkus.mongodb.database=rinha
 quarkus.mongodb.max-pool-size=15
 quarkus.http.enable-compression=true
-
+quarkus.redis.hosts=redis://redis:6379
+quarkus.redis.client-type=standalone
+quarkus.redis.max-pool-size=12
+quarkus.redis.max-pool-waiting=64
