--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,20 @@ services:
     networks:
       - default
 
+
+  redis:
+    image: redis
+    hostname: redis
+    ports:
+      - "6379:6379"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.1"
+          memory: "50MB"
+    networks:
+      - default
+
   nginx:
     image: nginx:latest
     volumes:
